--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts"
   },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "MIT",
+  "description": "",
+  "dependencies": {
+    "express": "4.19.2"
+  },
+  "devDependencies": {
+    "@swc-node/register": "1.10.0",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.6.7",
+    "@swc/jest": "0.2.36",
+    "@types/express": "4.17.21",
+    "@types/node": "20.14.9",
+    "nodemon": "3.1.4",
+    "typescript": "5.5.3"
+  }
 }
