--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts"
-  },
-  "author": "",
-  "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "express": "4.19.2"
-  },
-  "devDependencies": {
-    "@swc-node/register": "1.10.0",
-    "@swc/cli": "0.4.0",
-    "@swc/core": "1.6.7",
-    "@swc/jest": "0.2.36",
-    "@types/express": "4.17.21",
-    "@types/node": "20.14.9",
-    "nodemon": "3.1.4",
-    "typescript": "5.5.3"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
+		"lint": "prettier --check . && eslint .",
+		"lint:fix": "prettier --write . && eslint . --fix",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write ."
+	},
+	"author": "",
+	"license": "MIT",
+	"description": "",
+	"dependencies": {
+		"express": "4.19.2"
+	},
+	"devDependencies": {
+		"@swc-node/register": "1.10.0",
+		"@swc/cli": "0.4.0",
+		"@swc/core": "1.6.7",
+		"@swc/jest": "0.2.36",
+		"@types/eslint": "8.56.10",
+		"@types/eslint-config-prettier": "6.11.3",
+		"@types/eslint__js": "8.42.3",
+		"@types/express": "4.17.21",
+		"@types/node": "20.14.9",
+		"eslint": "9.6.0",
+		"eslint-config-prettier": "9.1.0",
+		"globals": "15.8.0",
+		"nodemon": "3.1.4",
+		"prettier": "3.3.2",
+		"typescript": "5.5.3",
+		"typescript-eslint": "7.15.0"
+	}
 }
