--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"lint": "prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
-		"format:fix": "prettier --write ."
+		"format:fix": "prettier --write .",
+		"prepare": "husky"
 	},
 	"author": "",
 	"license": "MIT",
@@ -16,6 +17,8 @@
 		"express": "4.19.2"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "19.3.0",
+		"@commitlint/config-conventional": "19.2.2",
 		"@swc-node/register": "1.10.0",
 		"@swc/cli": "0.4.0",
 		"@swc/core": "1.6.7",
@@ -28,6 +31,8 @@
 		"eslint": "9.6.0",
 		"eslint-config-prettier": "9.1.0",
 		"globals": "15.8.0",
+		"husky": "9.0.11",
+		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
 		"prettier": "3.3.2",
 		"typescript": "5.5.3",
