--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
+		"test": "TZ=UTC NODE_ENV=test SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
 		"lint": "prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
@@ -19,6 +20,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "19.3.0",
 		"@commitlint/config-conventional": "19.2.2",
+		"@side/jest-runtime": "1.1.0",
 		"@swc-node/register": "1.10.0",
 		"@swc/cli": "0.4.0",
 		"@swc/core": "1.6.7",
@@ -27,14 +29,18 @@
 		"@types/eslint-config-prettier": "6.11.3",
 		"@types/eslint__js": "8.42.3",
 		"@types/express": "4.17.21",
+		"@types/jest": "29.5.12",
 		"@types/node": "20.14.9",
+		"@types/supertest": "6.0.2",
 		"eslint": "9.6.0",
 		"eslint-config-prettier": "9.1.0",
 		"globals": "15.8.0",
 		"husky": "9.0.11",
+		"jest": "29.7.0",
 		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
 		"prettier": "3.3.2",
+		"supertest": "7.0.0",
 		"typescript": "5.5.3",
 		"typescript-eslint": "7.15.0"
 	}
