--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,6 @@
 		// "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
 		// "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
 		"skipLibCheck": true
-	}
+	},
+	"exclude": ["node_modules", "coverage"]
 }
