--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
-		"express": "4.19.2"
+		"@t3-oss/env-core": "0.10.1",
+		"dotenv": "16.4.5",
+		"express": "4.19.2",
+		"zod": "3.23.8"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.3.0",
