--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
-		"test": "TZ=UTC NODE_ENV=test SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
+		"test": "TZ=UTC NODE_ENV=test LOG_LEVEL=error SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
 		"lint": "prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
@@ -18,6 +18,9 @@
 		"@t3-oss/env-core": "0.10.1",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
+		"pino": "9.2.0",
+		"pino-http": "10.2.0",
+		"pino-pretty": "11.2.1",
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
