--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"globals": "15.8.0",
 		"husky": "9.0.11",
 		"jest": "29.7.0",
+		"jest-extended": "4.0.2",
 		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
 		"prettier": "3.3.2",
