--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
-		"@t3-oss/env-core": "0.10.1",
+		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
+		"helmet": "7.1.0",
 		"pino": "9.2.0",
 		"pino-http": "10.2.0",
 		"pino-pretty": "11.2.1",
@@ -31,6 +32,7 @@
 		"@swc/cli": "0.4.0",
 		"@swc/core": "1.6.7",
 		"@swc/jest": "0.2.36",
+		"@types/compression": "1.7.5",
 		"@types/eslint": "8.56.10",
 		"@types/eslint-config-prettier": "6.11.3",
 		"@types/eslint__js": "8.42.3",
