--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
-		"prepare": "husky"
+		"prepare": "husky",
+		"openapi": "openapi-typescript data/openapi/v1.yml -o src/types/openapi.d.ts --empty-objects-unknown && prettier --write src/types/openapi.d.ts"
 	},
 	"author": "",
 	"license": "MIT",
@@ -18,6 +19,7 @@
 		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
+		"express-openapi-validator": "5.2.0",
 		"helmet": "7.1.0",
 		"pino": "9.2.0",
 		"pino-http": "10.2.0",
@@ -48,6 +50,7 @@
 		"jest-extended": "4.0.2",
 		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
+		"openapi-typescript": "7.0.2",
 		"prettier": "3.3.2",
 		"supertest": "7.0.0",
 		"typescript": "5.5.3",
