feat: add prisma

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-# Http
+NODE_ENV=development
+
+# Server
+TZ=UTC
 HTTP_PORT=8080
+
+# Logging
+LOG_LEVEL=debug
+LOG_PRINT_PRETTY=true
+
+
+# Database
+DATABASE_HOST=localhost
+DATABASE_NAME=shoplog
+DATABASE_PORT=5432
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
