--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
+		"@prisma/client": "5.16.1",
 		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
@@ -53,8 +54,12 @@
 		"nodemon": "3.1.4",
 		"openapi-typescript": "7.0.2",
 		"prettier": "3.3.2",
+		"prisma": "5.16.1",
 		"supertest": "7.0.0",
 		"typescript": "5.5.3",
 		"typescript-eslint": "7.15.0"
+	},
+	"prisma": {
+		"seed": "node -r @swc-node/register prisma/seed.ts"
 	}
 }
