feat: setup prisma request scoped tnxs

--- a/compose.yml
+++ b/compose.yml
@@ -4,8 +4,7 @@ services:
     container_name: shoplog-db
     restart: always
     healthcheck:
-      test:
-        ['CMD', 'pg_isready', '-q', '-d', 'postgres', '-U', '${DATABASE_USER}']
+      test: ['CMD', 'pg_isready', '-q', '-d', 'postgres', '-U', '${DATABASE_USER}']
       timeout: 5s
       interval: 10s
       retries: 5
