feat: implement auth0

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,6 @@ HTTP_PORT=8080
 LOG_LEVEL=debug
 LOG_PRINT_PRETTY=true
 
-
 # Database
 DATABASE_HOST=localhost
 DATABASE_NAME=shoplog
@@ -16,3 +15,7 @@ DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
+
+# Auth0
+AUTH0_ISSUER=https://shoplog-dev.us.auth0.com/
+AUTH0_AUDIENCE=shoplog
