--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
+		"express-oauth2-jwt-bearer": "1.6.0",
 		"express-openapi-validator": "5.2.0",
 		"helmet": "7.1.0",
 		"pino": "9.2.0",
