--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,21 @@ HTTP_PORT=8080
 LOG_LEVEL=debug
 LOG_PRINT_PRETTY=true
 
-# Database
-DATABASE_HOST=localhost
-DATABASE_NAME=shoplog
-DATABASE_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
+# Postgres
+POSTGRES_HOST=localhost
+POSTGRES_NAME=shoplog
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_NAME}?schema=public
+
+# Sql Server
+SQL_SERVER_HOST=localhost
+SQL_SERVER_PORT=1433
+SQL_SERVER_USER=sa
+SQL_SERVER_PASSWORD=Password123!
+
+# Redis
 
 # Auth0
 AUTH0_ISSUER=https://shoplog-dev.us.auth0.com/
