--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
 		"prepare": "husky",
-		"openapi": "openapi-typescript data/openapi/v1.yml -o src/api/types/openapi.d.ts --empty-objects-unknown && prettier --write src/api/types/openapi.d.ts"
+		"openapi": "openapi-typescript data/openapi/v1.yml -o src/api/types/openapi.d.ts --empty-objects-unknown && prettier --write src/api/types/openapi.d.ts",
+		"docker:up": "docker-compose up -d",
+		"docker:down": "docker-compose down"
 	},
 	"author": "",
 	"license": "MIT",
