--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}
 
 # Sql Server
 SQL_SERVER_HOST=localhost
+SQL_SERVER_NAME=vPICList_Lite1
 SQL_SERVER_PORT=1433
 SQL_SERVER_USER=sa
 SQL_SERVER_PASSWORD=Password123!
