--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
 	"description": "",
 	"dependencies": {
 		"@prisma/client": "5.16.2",
+		"@tediousjs/connection-string": "0.5.0",
 		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
 		"express-oauth2-jwt-bearer": "1.6.0",
 		"express-openapi-validator": "5.2.0",
 		"helmet": "7.1.0",
+		"kysely": "0.27.4",
+		"lodash": "4.17.21",
 		"pino": "9.2.0",
 		"pino-http": "10.2.0",
 		"pino-pretty": "11.2.1",
+		"tarn": "3.0.2",
+		"tedious": "18.2.3",
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
@@ -45,6 +50,7 @@
 		"@types/express": "4.17.21",
 		"@types/express-serve-static-core": "4.19.5",
 		"@types/jest": "29.5.12",
+		"@types/lodash": "4.17.6",
 		"@types/node": "20.14.10",
 		"@types/supertest": "6.0.2",
 		"eslint": "9.6.0",
@@ -53,6 +59,7 @@
 		"husky": "9.0.11",
 		"jest": "29.7.0",
 		"jest-extended": "4.0.2",
+		"kysely-codegen": "0.15.0",
 		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
 		"openapi-typescript": "7.0.2",
