--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"husky": "9.0.11",
 		"jest": "29.7.0",
 		"jest-extended": "4.0.2",
+		"jest-mock-extended": "3.0.7",
 		"kysely-codegen": "0.15.0",
 		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
