--- a/.env.example
+++ b/.env.example
@@ -8,20 +8,13 @@ HTTP_PORT=8080
 LOG_LEVEL=debug
 LOG_PRINT_PRETTY=true
 
-# Postgres
-POSTGRES_HOST=localhost
-POSTGRES_NAME=shoplog
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_NAME}?schema=public
-
-# Sql Server
-SQL_SERVER_HOST=localhost
-SQL_SERVER_NAME=vPICList_Lite1
-SQL_SERVER_PORT=1433
-SQL_SERVER_USER=sa
-SQL_SERVER_PASSWORD=Password123!
+# Database
+DB_HOST=localhost
+DB_NAME=shoplog
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_NAME}?schema=public
 
 # Redis
 
