--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
-		"prepare": "husky",
-		"openapi": "openapi-typescript data/openapi/v1.yml -o src/api/types/openapi.d.ts --empty-objects-unknown && prettier --write src/api/types/openapi.d.ts",
-		"docker:up": "docker-compose up -d",
-		"docker:down": "docker-compose down"
+		"prepare": "husky"
 	},
 	"author": "",
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
-		"@prisma/client": "5.16.2",
-		"@tediousjs/connection-string": "0.5.0",
+		"@sinclair/typebox": "0.32.34",
 		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
@@ -30,10 +26,7 @@
 		"lodash": "4.17.21",
 		"pino": "9.2.0",
 		"pino-http": "10.2.0",
-		"pino-pretty": "11.2.1",
-		"tarn": "3.0.2",
-		"tedious": "18.2.3",
-		"zod": "3.23.8"
+		"pino-pretty": "11.2.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.3.0",
@@ -65,12 +58,8 @@
 		"nodemon": "3.1.4",
 		"openapi-typescript": "7.0.2",
 		"prettier": "3.3.2",
-		"prisma": "5.16.2",
 		"supertest": "7.0.0",
 		"typescript": "5.5.3",
 		"typescript-eslint": "7.16.0"
-	},
-	"prisma": {
-		"seed": "node -r @swc-node/register prisma/seed.ts"
 	}
 }
