chore: import sort rules

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
 		"test": "TZ=UTC NODE_ENV=test LOG_LEVEL=error SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
-		"lint": "prettier --check . && eslint .",
+		"lint": "tsc && prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
