--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"helmet": "7.1.0",
 		"kysely": "0.27.4",
 		"lodash": "4.17.21",
-		"pino": "9.2.0",
+		"pino": "9.3.1",
 		"pino-http": "10.2.0",
 		"pino-pretty": "11.2.1"
 	},
@@ -33,10 +33,11 @@
 		"@commitlint/cli": "19.3.0",
 		"@commitlint/config-conventional": "19.2.2",
 		"@side/jest-runtime": "1.1.0",
-		"@swc-node/register": "1.10.3",
+		"@swc-node/register": "1.10.9",
 		"@swc/cli": "0.4.0",
-		"@swc/core": "1.6.13",
+		"@swc/core": "1.7.0",
 		"@swc/jest": "0.2.36",
+		"@trivago/prettier-plugin-sort-imports": "4.3.0",
 		"@types/compression": "1.7.5",
 		"@types/eslint": "8.56.10",
 		"@types/eslint-config-prettier": "6.11.3",
@@ -44,23 +45,24 @@
 		"@types/express": "4.17.21",
 		"@types/express-serve-static-core": "4.19.5",
 		"@types/jest": "29.5.12",
-		"@types/lodash": "4.17.6",
-		"@types/node": "20.14.10",
+		"@types/lodash": "4.17.7",
+		"@types/node": "20.14.11",
 		"@types/supertest": "6.0.2",
-		"eslint": "9.6.0",
+		"eslint": "9.7.0",
 		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-import-x": "3.0.1",
 		"globals": "15.8.0",
-		"husky": "9.0.11",
+		"husky": "9.1.1",
 		"jest": "29.7.0",
 		"jest-extended": "4.0.2",
 		"jest-mock-extended": "3.0.7",
 		"kysely-codegen": "0.15.0",
 		"lint-staged": "15.2.7",
 		"nodemon": "3.1.4",
-		"openapi-typescript": "7.0.2",
-		"prettier": "3.3.2",
+		"openapi-typescript": "7.0.4",
+		"prettier": "3.3.3",
 		"supertest": "7.0.0",
 		"typescript": "5.5.3",
-		"typescript-eslint": "7.16.0"
+		"typescript-eslint": "7.16.1"
 	}
 }
