--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"dev": "pnpm openapi & TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
-		"test": "pnpm openapi & TZ=UTC NODE_ENV=test LOG_LEVEL=silent SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
+		"dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
+		"test": "TZ=UTC NODE_ENV=test LOG_LEVEL=silent SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
 		"lint": "tsc && prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
