--- a/data/openapi/v1.yml
+++ b/data/openapi/v1.yml
@@ -33,7 +33,7 @@ paths:
     get:
       summary: Search for a vehicle by VIN
       operationId: vehiclesSearchByVin
-      tags: ['Vehicles']
+      tags: ['Vehicles Search']
       parameters:
         - $ref: '#/components/parameters/vin'
       responses:
@@ -42,7 +42,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VehiclesSearchByVinResult'
+                $ref: '#/components/schemas/VehiclesSearchByVinResponseBody'
         '400':
           $ref: '#/components/responses/400'
         '401':
@@ -53,6 +53,24 @@ paths:
           $ref: '#/components/responses/404'
         '422':
           $ref: '#/components/responses/422'
+        '500':
+          $ref: '#/components/responses/500'
+  /vehicles/search/years:
+    get:
+      summary: Get a list of supported vehicle years
+      operationId: vehiclesSearchYears
+      tags: ['Vehicles Search']
+      responses:
+        '200':
+          description: Vehicle years found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VehiclesSearchYearsResponseBody'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
         '500':
           $ref: '#/components/responses/500'
 components:
@@ -105,7 +123,7 @@ components:
             $ref: '#/components/schemas/Problem'
       description: Request was not processed due to an internal server error
   schemas:
-    VehiclesSearchByVinResult:
+    VehiclesSearchByVinResponseBody:
       description: 'A vehicle search result'
       type: object
       properties:
@@ -147,6 +165,13 @@ components:
             oneOf:
               - type: string
               - type: number
+    VehiclesSearchYearsResponseBody:
+      description: 'A list of vehicle years'
+      type: array
+      items:
+        type: integer
+        format: int32
+      example: [2000, 2001, 2002]
     Problem:
       description: A Problem Details object (RFC 9457)
       type: object
