--- a/data/openapi/v1.yml
+++ b/data/openapi/v1.yml
@@ -73,6 +73,26 @@ paths:
           $ref: '#/components/responses/403'
         '500':
           $ref: '#/components/responses/500'
+  /vpic/makes:
+    get:
+      summary: Get a list of supported vehicle makes by year
+      operationId: getVPICMakes
+      tags: ['VPIC']
+      parameters:
+        - $ref: '#/components/parameters/year'
+      responses:
+        '200':
+          description: Vehicle makes found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VPICMakesResponseBody'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '500':
+          $ref: '#/components/responses/500'
 components:
   parameters:
     vin:
@@ -85,6 +105,15 @@ components:
         minLength: 17
         maxLength: 17
       example: 5TEWN72N82Z891171
+    year:
+      name: year
+      in: query
+      description: Vehicle year
+      required: true
+      schema:
+        type: integer
+        format: int32
+      example: 2002
   responses:
     '400':
       content:
@@ -172,6 +201,21 @@ components:
         type: integer
         format: int32
       example: [2000, 2001, 2002]
+    VPICMakesResponseBody:
+      description: 'A list of vehicle makes'
+      type: array
+      items:
+        $ref: '#/components/schemas/Lookup'
+    Lookup:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: The unique identifier for a lookup
+        name:
+          type: string
+          description: The name of the lookup
     Problem:
       description: A Problem Details object (RFC 9457)
       type: object
