--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"compression": "1.7.4",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
+		"express-jwt": "8.4.1",
 		"express-oauth2-jwt-bearer": "1.6.0",
 		"express-openapi-validator": "5.2.0",
 		"helmet": "7.1.0",
@@ -36,6 +37,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "19.3.0",
 		"@commitlint/config-conventional": "19.2.2",
+		"@ngneat/falso": "7.2.0",
 		"@side/jest-runtime": "1.1.0",
 		"@swc-node/register": "1.10.9",
 		"@swc/cli": "0.4.0",
@@ -49,8 +51,10 @@
 		"@types/express": "4.17.21",
 		"@types/express-serve-static-core": "4.19.5",
 		"@types/jest": "29.5.12",
+		"@types/jsonwebtoken": "9.0.6",
 		"@types/lodash": "4.17.7",
 		"@types/node": "22.1.0",
+		"@types/pem-jwk": "2.0.2",
 		"@types/supertest": "6.0.2",
 		"eslint": "9.8.0",
 		"eslint-config-prettier": "9.1.0",
@@ -60,10 +64,14 @@
 		"jest": "29.7.0",
 		"jest-extended": "4.0.2",
 		"jest-mock-extended": "3.0.7",
+		"jose": "5.6.3",
+		"jsonwebtoken": "9.0.2",
 		"kysely-codegen": "0.15.0",
 		"lint-staged": "15.2.7",
+		"nock": "13.5.4",
 		"nodemon": "3.1.4",
 		"openapi-typescript": "7.3.0",
+		"pem-jwk": "2.0.0",
 		"prettier": "3.3.3",
 		"supertest": "7.0.0",
 		"typescript": "5.5.4",
