--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
 		"prepare": "husky",
-		"openapi": "openapi-typescript data/openapi/v1.yml -o src/api/types/openapi.d.ts --empty-objects-unknown && prettier --write src/api/types/openapi.d.ts"
+		"openapi": "openapi-typescript data/openapi/v1.yml -o src/api/types/openapi.d.ts --empty-objects-unknown && prettier --write src/api/types/openapi.d.ts",
+		"db": "kysely"
 	},
 	"author": "",
 	"license": "MIT",
@@ -63,6 +64,7 @@
 		"jest-mock-extended": "3.0.7",
 		"jose": "5.6.3",
 		"kysely-codegen": "0.15.0",
+		"kysely-ctl": "0.9.0",
 		"lint-staged": "15.2.7",
 		"nock": "13.5.4",
 		"nodemon": "3.1.4",
