--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
 		"format:fix": "prettier --write .",
 		"prepare": "husky",
 		"openapi": "openapi-typescript data/openapi/v1.yml -o src/api/types/openapi.d.ts --empty-objects-unknown && prettier --write src/api/types/openapi.d.ts",
-		"db": "kysely"
+		"db:client:generate": "prisma generate",
+		"db:migrate:dev": "prisma migrate dev",
+		"db:seed": "prisma db seed"
 	},
 	"author": "",
 	"license": "MIT",
 	"description": "",
 	"dependencies": {
+		"@prisma/client": "5.18.0",
 		"@scalar/express-api-reference": "0.4.128",
 		"@sinclair/typebox": "0.32.35",
 		"compression": "1.7.4",
@@ -64,14 +67,18 @@
 		"jest-mock-extended": "3.0.7",
 		"jose": "5.6.3",
 		"kysely-codegen": "0.15.0",
-		"kysely-ctl": "0.9.0",
 		"lint-staged": "15.2.7",
 		"nock": "13.5.4",
 		"nodemon": "3.1.4",
 		"openapi-typescript": "7.3.0",
 		"prettier": "3.3.3",
+		"prisma": "5.18.0",
 		"supertest": "7.0.0",
 		"typescript": "5.5.4",
 		"typescript-eslint": "8.0.0"
+	},
+	"prisma": {
+		"schema": "src/data/main/schema.prisma",
+		"seed": "node -r @swc-node/register src/data/main/seed.ts"
 	}
 }
