--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@scalar/express-api-reference": "0.4.128",
 		"@sinclair/typebox": "0.32.35",
 		"compression": "1.7.4",
+		"cors": "2.8.5",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
 		"express-oauth2-jwt-bearer": "1.6.0",
@@ -48,6 +49,7 @@
 		"@swc/jest": "0.2.36",
 		"@trivago/prettier-plugin-sort-imports": "4.3.0",
 		"@types/compression": "1.7.5",
+		"@types/cors": "2.8.17",
 		"@types/eslint": "9.6.0",
 		"@types/eslint-config-prettier": "6.11.3",
 		"@types/eslint__js": "8.42.3",
