--- a/.env.example
+++ b/.env.example
@@ -17,10 +17,10 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_NAME}?schema=public
 
 # Sql Server Database
-DATABASE_HOST=localhost
-DATABASE_NAME=vPICList_Lite1
+SQL_SERVER_HOST=localhost
+SQL_SERVER_DATABASE=vPICList_Lite1
 SQL_SERVER_PORT=1433
-SQL_SERVER_USER=sa
+SQL_SERVER_USERNAME=sa
 SQL_SERVER_PASSWORD=yourStrong(!)Password
 
 # Redis
