--- a/package.json
+++ b/package.json
@@ -18,65 +18,66 @@
 	"license": "GPL-3.0-only",
 	"description": "",
 	"dependencies": {
-		"@prisma/client": "5.18.0",
-		"@scalar/express-api-reference": "0.4.128",
-		"@sinclair/typebox": "0.32.35",
+		"@auth0/nextjs-auth0": "3.5.0",
+		"@prisma/client": "5.19.1",
+		"@scalar/express-api-reference": "0.4.148",
+		"@sinclair/typebox": "0.33.9",
 		"compression": "1.7.4",
 		"cors": "2.8.5",
 		"dotenv": "16.4.5",
 		"express": "4.19.2",
 		"express-oauth2-jwt-bearer": "1.6.0",
-		"express-openapi-validator": "5.2.0",
+		"express-openapi-validator": "5.3.5",
 		"helmet": "7.1.0",
 		"kysely": "0.27.4",
 		"lodash": "4.17.21",
-		"pino": "9.3.2",
-		"pino-http": "10.2.0",
+		"pino": "9.4.0",
+		"pino-http": "10.3.0",
 		"pino-pretty": "11.2.2",
-		"string-strip-html": "8.5.0",
+		"string-strip-html": "13.4.8",
 		"tarn": "3.0.2",
-		"tedious": "18.3.0"
+		"tedious": "18.6.1"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "19.3.0",
-		"@commitlint/config-conventional": "19.2.2",
+		"@commitlint/cli": "19.4.1",
+		"@commitlint/config-conventional": "19.4.1",
 		"@ngneat/falso": "7.2.0",
 		"@side/jest-runtime": "1.1.0",
 		"@swc-node/register": "1.10.9",
 		"@swc/cli": "0.4.0",
-		"@swc/core": "1.7.5",
+		"@swc/core": "1.7.23",
 		"@swc/jest": "0.2.36",
 		"@trivago/prettier-plugin-sort-imports": "4.3.0",
 		"@types/compression": "1.7.5",
 		"@types/cors": "2.8.17",
-		"@types/eslint": "9.6.0",
+		"@types/eslint": "9.6.1",
 		"@types/eslint-config-prettier": "6.11.3",
 		"@types/eslint__js": "8.42.3",
 		"@types/express": "4.17.21",
 		"@types/express-serve-static-core": "4.19.5",
 		"@types/jest": "29.5.12",
 		"@types/lodash": "4.17.7",
-		"@types/node": "22.1.0",
+		"@types/node": "22.5.4",
 		"@types/supertest": "6.0.2",
-		"eslint": "9.8.0",
+		"eslint": "9.10.0",
 		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-import-x": "3.1.0",
+		"eslint-plugin-import-x": "4.2.1",
 		"globals": "15.9.0",
-		"husky": "9.1.4",
+		"husky": "9.1.5",
 		"jest": "29.7.0",
 		"jest-extended": "4.0.2",
-		"jest-mock-extended": "3.0.7",
-		"jose": "5.6.3",
-		"kysely-codegen": "0.15.0",
-		"lint-staged": "15.2.7",
-		"nock": "13.5.4",
+		"jest-mock-extended": "4.0.0-beta1",
+		"jose": "5.8.0",
+		"kysely-codegen": "0.16.5",
+		"lint-staged": "15.2.10",
+		"nock": "13.5.5",
 		"nodemon": "3.1.4",
-		"openapi-typescript": "7.3.0",
+		"openapi-typescript": "7.4.0",
 		"prettier": "3.3.3",
-		"prisma": "5.18.0",
+		"prisma": "5.19.1",
 		"supertest": "7.0.0",
 		"typescript": "5.5.4",
-		"typescript-eslint": "8.0.0"
+		"typescript-eslint": "8.4.0"
 	},
 	"prisma": {
 		"schema": "src/data/main/schema.prisma",
