--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"prettier": "3.3.3",
 		"prisma": "5.19.1",
 		"supertest": "7.0.0",
+		"testcontainers": "10.13.0",
 		"typescript": "5.5.4",
 		"typescript-eslint": "8.4.0"
 	},
