--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@prisma/client": "5.19.1",
 		"@scalar/express-api-reference": "0.4.148",
 		"@sinclair/typebox": "0.33.9",
+		"@types/luxon": "3.4.2",
 		"compression": "1.7.4",
 		"cors": "2.8.5",
 		"dotenv": "16.4.5",
@@ -31,6 +32,7 @@
 		"helmet": "7.1.0",
 		"kysely": "0.27.4",
 		"lodash": "4.17.21",
+		"luxon": "3.5.0",
 		"pino": "9.4.0",
 		"pino-http": "10.3.0",
 		"pino-pretty": "11.2.2",
